--- a/对话策略.md
+++ b/对话策略.md
@@ -1,6 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《Know More about Each Other: Evolving Dialogue Strategy via Compound Assessment》  | ACL2019 |NULL |NULL |NULL |
+| 《Know More about Each Other: Evolving Dialogue Strategy via Compound Assessment》| ACL 2019|基于信息量和相关性度量的强化学习对话系统：<br/>1 将上下文和知识进行嵌入，指导对话生成；<br/>2 使用信息量和相关性来评估对话生成质量；<br/>3 最终，基于强化学习框架进行模型优化；|NULL |NULL|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
