--- a/推荐&广告&搜索.md
+++ b/推荐&广告&搜索.md
@@ -1,5 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 《Deep Learning based Recommender System: A Survey and New Perspectives》  | ACM Computing Surveys 2018 |1 INTRODUCTION<br/> 2 OVERVIEW OF RECOMMENDER SYSTEMS AND DEEP LEARNING<br/> 3 DEEP LEARNING BASED RECOMMENDATION: STATE-OF-THE-ART<br/> 4 FUTURE RESEARCH DIRECTIONS AND OPEN ISSUES<br/> 5 CONCLUSION|done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | 《Deep Neural Networks for YouTube Recommendations》  | RecSys2016 |Youtubee深度推荐系统经典 |NULL |NULL |
 | 《Deep Crossing: Web-Scale Modeling without Manually Crafted Combinatorial Features》  | KDD2016 |特征嵌入后，直接stacking（concat） |done |NULL |
 | 《Deep & Cross Network for Ad Click Predictions》  | ADKDD2017 |-排序使用方案;<br/>在deep&wide的框架下，替换wide：特征嵌入后做cross（区别FM）; |done |NULL |
@@ -8,7 +10,6 @@
 | 《推荐系统调研报告及综述》  | NULL |对经典方法的总结 |done |http://yongfeng.me/attach/rs-survey-zhang.pdf |
 | 《bipartite graph neural networks for efficient node representation learning》  | NULL |商品推荐应用 |NULL |NULL |
 | 《Wide & Deep Learning for Recommender Systems》  | arXiv2016 |NULL |NULL |NULL |
-| 《Semantic search on text and knowledge bases》  | 2016 |语义搜索，200多页，综述类型 |NULL |http://ad-publications.informatik.uni-freiburg.de/FNTIR_semanticsearch_BBH_2016.pdf |
 | 《SESSION-BASED RECOMMENDATIONS WITH RECURRENT NEURAL NETWORKS》| ICLR2016|基于RNN（LSTM）进行Session推荐：<br/>1 Session内的Item是固定的，只使用索引作为特征；<br/>2 MINI-BATCHES特殊处理（太短的Session，后面用其他Session补全）；<br/>3 特别的负样本采样；<br/>4 不同的损失函数；<br/>5 评测指标（Recall@20，MRR@20）？|done|NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
