--- a/搜索.md
+++ b/搜索.md
@@ -1,6 +1,6 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| 《Deep Learning based Recommender System: A Survey and New Perspectives》  | ACM Computing Surveys 2018 |1 INTRODUCTION<br/> 2 OVERVIEW OF RECOMMENDER SYSTEMS AND DEEP LEARNING<br/> 3 DEEP LEARNING BASED RECOMMENDATION: STATE-OF-THE-ART<br/> 4 FUTURE RESEARCH DIRECTIONS AND OPEN ISSUES<br/> 5 CONCLUSION|done |NULL |
+| 《Semantic search on text and knowledge bases》  | 2016 |语义搜索，200多页，综述类型 |NULL |http://ad-publications.informatik.uni-freiburg.de/FNTIR_semanticsearch_BBH_2016.pdf |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
