--- a/标签体系&标签扩展&兴趣标签&概念标签.md
+++ b/标签体系&标签扩展&兴趣标签&概念标签.md
@@ -4,4 +4,10 @@
 | 《GIANT: Scalable Creation of a Web-scale Ontology》| SIGMOD 2020|腾讯概念图谱续集：<br/>1 在之前Category，Concept，Entity的基础上，扩展了Event和Topic；<br/>2 在模型方面引入了图网络；|NULL |郭伟东,2013年- 2017年在百度自然语言处理部工作|
 | 《AliCoCo: Alibaba E-commerce Cognitive Concept Net》  | SIGMOD 2020  |阿里概念图谱： |NULL |参考：<br/>https://zhuanlan.zhihu.com/p/148502336 <br/> https://www.sohu.com/a/385468264_500659 |
 | 《Octet: Online Catalog Taxonomy Enrichment with Self-Supervision》| KDD2020|分类体系自动扩展：<br/>1 主要分为子类发现和上位类关联两步；<br/>2 只使用之前的类别信息+用户输入和结果的点击信息；<br/>3 子类发现：使用序列标注；<br/>4 上位类关联：使用各种方式构建多维特征，然后，进行是否为上位类的二分类判断；|NULL |NULL |
+| 《Meta-Learning for Qery Conceptualization at Web Scale》| KDD 2020|基于meta learning完成query和概念的匹配：<br/>1 两阶段方案：I 概念粗召回，II 基于meta learning的zero-shot进行匹配；<br/>2 I阶段的概念粗召回和基于点击图的训练数据挖掘都依赖于《A Deep Generative Approach to Search Extrapolation and Recommendation》这篇文章的前置信息；<br/>3 没看懂meta learning的zero-shot在本方案中是如何发挥作用的？|NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
