--- a/搜索.md
+++ b/搜索.md
@@ -1,6 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Semantic search on text and knowledge bases》  | 2016 |语义搜索，200多页，综述类型 |NULL |http://ad-publications.informatik.uni-freiburg.de/FNTIR_semanticsearch_BBH_2016.pdf |
+| 《A Deep Generative Approach to Search Extrapolation and Recommendation》| KDD 2019|搜索query扩改写：<br/>1 可以有效补全信息（Lexical Chase problem），效果示例：“5s买什么电池”->“苹果5s换电池多少钱”；<br/>2 两阶段方案：I 关键词抽取+扩充，II 完成新query生成；<br/>3 I阶段模型相对简单，就是query信息嵌入后，计算目标词表的概率分布；<br/>4 II 阶段模型，融合I阶段生成的关键词+query原始信息；<br/>5 II 阶段模型，输出从原query和生成词中抽取信息，同时，从固定的高频词表中选词；<br/>6 II 阶段模型，有基于Transferable多头机制的改进版；<br/>7 训练数据主要从query-文档点击数据中挖掘：query->关键词，query->改写后query；|NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
