--- a/样本不均衡.md
+++ b/样本不均衡.md
@@ -1,4 +1,10 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Dice loss for data-imbalance NLP tasks》  | ACL2020 |NULL |NULL |NULL |
+| 《Meta-Weight-Net: Learning an Explicit Mapping For Sample Weighting》| NIPS 2019|Meta Learning应用与噪声标签和数据不均衡场景：<br/>1 常用的处理噪声标签和数据不均衡手段，主要是在最后的损失函数部分设置权重，权重的大小由损失计算获得；<br/>2 数据不均衡，一般权重随损失增大而增大，比如Focal Loss；<br/>3 噪声标签，一般权重随损失增大而减小，比如SPL；<br/>4 本文的创新点在于，权重的设置不是手动完成，而是通过一个meta网络自动计算；<br/>5 需要注意，训练集存在两份，一份用来训练meta网络（均衡、无噪声），一份用来训练主线模型；<br/>6 没看懂meta网络是理论基础是什么？和meta learning的联系是什么？|NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
