--- a/文本预训练模型.md
+++ b/文本预训练模型.md
@@ -1,7 +1,8 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 综述  | NULL |NULL |NULL |NULL |
 | 《Pre-trained Models for Natural Language Processing: A Survey》  | Arxiv2020 |邱锡鹏预训练模型综述：<br/>1 Introduction<br/>2 Background<br/>3 Overview of PTMs<br/>4 Extensions of PTMs<br/>5 Adapting PTMs to Downstream Tasks<br/>6 Resources of PTMs<br/>7 Applications<br/>8 Future Directions<br/>9 Conclusion |done |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 常规预训练模型  | NULL |NULL |NULL |NULL |
 | 《Semi-supervised Sequence Learning》  | NIPS2015 |上下文信息预训练模型最早的论文：<br/> 1 单链LSTM的预训练模型； |done |NULL |
 | 《Learned in Translation: Contextualized Word Vectors》  | NIPS2017 |The first paper that proposes a contextualized text representation approach？ |NULL |NULL |
 | 《Semi-supervised sequence tagging with bidirectional language models》  | ACL2017 |AllenNLP，TagLM，ELMO的前身：<br/>已经引入了ELMO的双向LSTM预训练向量机制，但重点在序列标注任务; |done |NULL |
@@ -27,7 +28,7 @@
 | 《K-BERT: Enabling Language Representation with Knowledge Graph》  | 2019 |K-BERT |NULL |NULL |
 | 《StructBERT: Incorporating Language Structures into Pre-training for Deep Language Understanding》  | 2019 |阿里StructBERT |NULL |NULL |
 | 《Semantics-aware BERT for Language Understanding》  | AAAI2020 |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 长文本  | NULL |NULL |NULL |NULL |
 | 《XLNet: Generalized Autoregressive Pretraining for Language Understanding》  | NIPS2019 |XLNet：<br/>没怎么看懂，看了很多博客，但还是不太清楚 |done |哈工大/讯飞联合实验室，开源中文XLNet预训练模型：<br> https://github.com/ymcui/Chinese-XLNet |
 | 《Longformer: The Long-Document Transformer》| arXiv2020|长文本处理Transformer预训练模型：<br/>1 滑动膨胀Attention；<br/>2 全局Attention;<br/>3 CUDA实现；<br/>4 在RoBert的参数基础上，进行进一步预训练（基于Autoregressive语言模型）；|done|https://zhuanlan.zhihu.com/p/223430086|
 | 《Big Bird: Transformers for Longer Sequences》  | 2020 |Big Bird |NULL |NULL |
@@ -37,14 +38,14 @@
 | 《DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter》  | NIPS2019 |DistilBERT |NULL |NULL |
 | 《TinyBERT: Distilling BERT for Natural Language Understanding》  | EMNLP2020 |TinyBERT |NULL |NULL |
 | 《FastBERT: a Self-distilling BERT with Adaptive Inference Time》  | ACL2020 |FastBERT |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 超大规模预训练模型  | NULL |NULL |NULL |NULL |
 | 《Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer》  | NULL |Google T5：<br>模型结构：Encoder-Decoder、Language model和Prefix LM;<br>注意力掩码机制：Casual、Casual prefix和Fully-visible;<br>预训练方法：语言模型式、Bert Mask式和Deshuffling;<br>Mask策略：Mask模式、Replace span模式和drop模式;<br>Mask比例：10%、15%、25%和50%四种;<br>Span长度：2、3、5和10四种;<br>训练策略：fine-tune、多任务学习、多任务fine-tune和Scaling; |done |博客参考：<br/> https://zhuanlan.zhihu.com/p/88727133 <br/> https://zhuanlan.zhihu.com/p/138235834|
 | 《Megatron-LM: Training Multi-Billion Parameter Language Models Using Model Parallelism》  | 2019 |英伟达 Megatron-LM |NULL |NULL |
 | 《THE COST OF TRAINING NLP MODELS A CONCISE OVERVIEW》  | NULL |预训练模型成本对比： |done |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 特定任务领域预训练模型  | NULL |NULL |NULL |NULL |
 | 《SpanBERT: Improving Pre-training by Representing and Predicting Spans》  | TACL2020 |SpanBERT |NULL |NULL |
 | 《Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks》  | EMNLP2019 |Sentence-BERT |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 中文预训练模型  | NULL |NULL |NULL |NULL |
 | 《Pre-Training with Whole Word Masking for Chinese BERT》  | 2019 |中文WWM预训练BERT |NULL |NULL |
 | 《NEZHA: Neural Contextualized Representation for Chinese Language Understanding》  | 2019 |NEZHA |NULL |NULL |
 | 《ZEN: Pre-training Chinese (Z) Text Encoder Enhanced by N-gram Representations 》  | 2019 |ZEN |NULL |NULL |
