--- a/文本预训练模型.md
+++ b/文本预训练模型.md
@@ -2,13 +2,13 @@
 |  ----  | ----  |----  | ----  |----  |
 | 综述  | NULL |NULL |NULL |NULL |
 | 《Pre-trained Models for Natural Language Processing: A Survey》  | Arxiv2020 |邱锡鹏预训练模型综述：<br/>1 Introduction<br/>2 Background<br/>3 Overview of PTMs<br/>4 Extensions of PTMs<br/>5 Adapting PTMs to Downstream Tasks<br/>6 Resources of PTMs<br/>7 Applications<br/>8 Future Directions<br/>9 Conclusion |done |NULL |
-| 常规预训练模型  | NULL |NULL |NULL |NULL |
+| 预训练模型探索  | NULL |NULL |NULL |NULL |
 | 《Semi-supervised Sequence Learning》  | NIPS2015 |上下文信息预训练模型最早的论文：<br/> 1 单链LSTM的预训练模型； |done |NULL |
 | 《Learned in Translation: Contextualized Word Vectors》  | NIPS2017 |The first paper that proposes a contextualized text representation approach？ |NULL |NULL |
 | 《Semi-supervised sequence tagging with bidirectional language models》  | ACL2017 |AllenNLP，TagLM，ELMO的前身：<br/>已经引入了ELMO的双向LSTM预训练向量机制，但重点在序列标注任务; |done |NULL |
 | 《Universal Language Model Fine-tuning for Text Classification》  | ACL2018 |FastAI的ULMFiT; <br/>号称ELMO之前的，引入上下文的预训练模型：<br/>三阶段; |done |NULL |
 | 《Deep contextualized word representation》  | NAACL2018 |AllenNLP ELMO：非常简单 |done |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 预训练模型兴起  | NULL |NULL |NULL |NULL |
 | 《Improving Language Understanding by Generative Pre-Training》  | 2018，没发表？ |OpenAI GPT：<br/> 先于BERT提出Pre-train+Fine-tuning范式; |done |NULL |
 | 《Language Models are Unsupervised Multitask Learners》  | 2019，没发表？ |GPT-2：<br/>数据集WebText；<br/>Train一个参数超大的语言模型，实现Zero-shot效果；<br/>没有Fine-tuning过程； |done |NULL |
 | 《Language Models are Few-Shot Learners》  | NULL |GPT-3：<br/>实现few-shot和one-shot，不需要梯度更新；<br/>可以Fine-tuning，但paper中，没用Fine-tuning；<br/>one-shot和few-shot体现在输入中，而不会用来微调，可以参考paper中的Figure 2.1； |done |NULL |
@@ -28,11 +28,11 @@
 | 《K-BERT: Enabling Language Representation with Knowledge Graph》  | 2019 |K-BERT |NULL |NULL |
 | 《StructBERT: Incorporating Language Structures into Pre-training for Deep Language Understanding》  | 2019 |阿里StructBERT |NULL |NULL |
 | 《Semantics-aware BERT for Language Understanding》  | AAAI2020 |NULL |NULL |NULL |
-| 长文本  | NULL |NULL |NULL |NULL |
+| 长文本预训练模型  | NULL |NULL |NULL |NULL |
 | 《XLNet: Generalized Autoregressive Pretraining for Language Understanding》  | NIPS2019 |XLNet：<br/>没怎么看懂，看了很多博客，但还是不太清楚 |done |哈工大/讯飞联合实验室，开源中文XLNet预训练模型：<br> https://github.com/ymcui/Chinese-XLNet |
 | 《Longformer: The Long-Document Transformer》| arXiv2020|长文本处理Transformer预训练模型：<br/>1 滑动膨胀Attention；<br/>2 全局Attention;<br/>3 CUDA实现；<br/>4 在RoBert的参数基础上，进行进一步预训练（基于Autoregressive语言模型）；|done|https://zhuanlan.zhihu.com/p/223430086|
 | 《Big Bird: Transformers for Longer Sequences》  | 2020 |Big Bird |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 预训练模型压缩  | NULL |NULL |NULL |NULL |
 | 《Well-Read Students Learn Better: On the Importance of Pre-training Compact Models》  | arXiv2019 |NULL |NULL |Google官方蒸馏方法：<br/> github：https://github.com/google-research/bert |
 | 《ALBERT: A Lite BERT for Self-supervised Learning of Language Representations》  | 2019 |ALBERT |NULL |NULL |
 | 《DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter》  | NIPS2019 |DistilBERT |NULL |NULL |
