--- a/文本分类.md
+++ b/文本分类.md
@@ -1,6 +1,8 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 综述  | NULL |NULL |NULL |NULL |
 | 《Deep Learning Based Text Classification: A Comprehensive Review》| arXiv2020|文本分类综述：<br/>1 INTRODUCTION<br/>2 DEEP LEARNING MODELS FOR TEXT CLASSIFICATION<br/>3 TEXT CLASSIFICATION DATASETS<br/>4 EXPERIMENTAL PERFORMANCE ANALYSIS<br/>5 CHALLENGES AND OPPORTUNITIES<br/>6 CONCLUSION|done|NULL |
+| 层次分类  | NULL |NULL |NULL |NULL |
 | 《Hierarchical Multi-Label Classification Networks》  | ICML2019 |层次分类；<br/>全局层次信息+局部层次信息；<br/>PRC评价；<br/>AVERAGE RANKING评价没看懂； |done |NULL |
 | 《Large-Scale Hierarchical Text Classification with Recursively Regularized Deep Graph-CNN》  | WWW2018	|层次分类；<br/>基于图网络的，层次化，文本分类；<br/>层次化信息，通过要求子分类与父分类的权重相近，正则化处理显现出来； |done |NULL |
 | 《Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification》  | NULL |上一篇文章的更新版本 |NULL |NULL |
