--- a/多模态.md
+++ b/多模态.md
@@ -1,6 +1,8 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 综述  | NULL |NULL |NULL |NULL |
 | 《Multimodal Machine Learning: A Survey and Taxonomy》  | arXiv2017 |多模态综述：<br/>1 Introduction<br/>2 APPLICATIONS: A HISTORICAL PERSPECTIVE<br/>3 MULTIMODAL REPRESENTATIONS<br/>4 TRANSLATION<br/>5 ALIGNMENT<br/>6 FUSION<br/>7 CO-LEARNING<br/>8 CONCLUSION |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | 《ERNIE-VIL: KNOWLEDGE ENHANCED VISION-LANGUAGE REPRESENTATIONS THROUGH SCENE GRAPH》| arXiv2020|基于ERNIE的图文多模态预训练模型：<br/>1 ERNIE+图像+场景图谱（实体、属性、关系）；<br/>2 场景图通过NLP工具，分析描述构建；<br/>3 图像中的实体通过目标检测工具获得|done|NULL |
 | 《VideoBERT: A Joint Model for Video and Language Representation Learning》| ICCV2019|基于BERT结果的，字幕+视频多模态预训练模型：<br/> 1 字幕通过ASR识别获得|done|NULL |
 | 《VistaNet: Visual Aspect Attention Network for Multimodal Sentiment Analysis》  | AAAI2019 |形式非常简单;<br/>长文+文字attention+图文attention; |done |NULL |
