--- a/任务型对话.md
+++ b/任务型对话.md
@@ -1,14 +1,16 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 综述  | NULL |NULL |NULL |NULL |
+| 《Neural Approaches to Conversational AI Question Answering, Task-Oriented Dialogues and Social Chatbots》  | Arxiv2018 |NULL |NULL |NULL |
+| DST相关  | NULL |NULL |NULL |NULL |
 | 《The Dialog State Tracking Challenge Series: A Review》| Microsoft 2016|DSTC比赛综述：<br/>1. Introduction；<br/>2. Dialog state tracking: problem definition；<br/>3. Methods for dialog state tracking；<br/>4. Challenge tasks；<br/>5. Challenge entries and results；<br/>6. Practical issues and lessons learned；<br/>7. Perspectives and Conclusion；|done|https://zhuanlan.zhihu.com/p/40988001|
 | 《MACHINE LEARNING FOR DIALOG STATE TRACKING:A REVIEW》| Google 2015|DST综述：<br/>1. INTRODUCTION；<br/>2. PROBLEM DEFINITION；<br/>3. RULE-BASED AND GENERATIVE DIALOG STATE TRACKING；<br/>4. MACHINE-LEARNED DISCRIMINATIVE DIALOG STATE TRACKING；<br/>5. EVALUATION；<br/>6. CONCLUSIONS；|done|STD面对的核心问题是，三个维度的信息如何融合/嵌入：<br/>1 时间信息；<br/>2 用户反馈信息（用户对话）；<br/>3 系统反馈信息（系统对话）；<br/>4 系统全局状态（status）；<br/>https://zhuanlan.zhihu.com|
-| 《Neural Approaches to Conversational AI Question Answering, Task-Oriented Dialogues and Social Chatbots》  | Arxiv2018 |NULL |NULL |NULL |
-| 《BERT for Joint Intent Classifification and Slot Filling》  | Arxiv2019 |NULL |NULL |NULL |
 | 《Deep Neural Network Approach for the Dialog State Tracking Challenge》| ACL2013|基于DNN的DST方案：<br/>1 基于DNN实现；<br/>2 针对每个slot创建一个模型；<br/>3 针对slot是否为v，进行二分类判断；<br/>4 系统、用户、全局status信息通过手工特征函数进行嵌入；<br/>5 时间信息直接输入DNN的输入层；|done|https://zhuanlan.zhihu.com/p/40988001|
+| 意图槽位提取相关  | NULL |NULL |NULL |NULL |
+| 《BERT for Joint Intent Classifification and Slot Filling》  | Arxiv2019 |NULL |NULL |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | 《Task-Oriented Dialogue as Dataflow Synthesis》| TACL 2020|用数据流合成实现任务型对话：<br/>1 引入了辅助函数和规范语句，让机器语言成为自然语言的同义改写;<br/>2 又引入「引用」和「修改」机制消除了程序对上下文的依赖性;<br/>3 使用数据流（有向图）来完成DST的功能；<br/>4 自然语言->规范语句（定制语言）是如何标注的？模型又是如何通过原始的自然语言，生成嵌套形式的规范语句的？|NULL |https://zhuanlan.zhihu.com/p/245081650|
 | 《Transferable Multi-Domain State Generator for Task-Oriented Dialogue Systems》| ACL 2019|多领域的<领域，词槽>提取：<br/>1 多轮输入通过encoder嵌入（Bi-GRU）；<br/>2 <领域，词槽>对，通过另一个GRU生成，<领域名，词槽名>作为第一步的输入，然后，输入多轮的上下文，GRU的输出，通过指针+生成的方式产出<词槽名>（感觉这样的框架，会导致速度会很慢，要遍历所有的<领域名，词槽名>）；<br/>3 Slot Gate判定上一步生成的槽位是否可信；<br/>4 在 Zero-shot和Few-shot进行尝试，其中，Few-shot应用了continual learning技术；|NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
