--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -1,21 +1,23 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
+| 综述  | NULL |NULL |NULL |NULL |
 | 《A Survey on Deep Learning for Named Entity Recognition》| arXiv2020|NER综述：<br/>1 INTRODUCTION；<br/>2 BACKGROUND；<br/>3 DEEP LEARNING TECHNIQUES FOR NER；<br/>4 APPLIED DEEP LEARNING FOR NER；<br/>5 CHALLENGES AND FUTURE DIRECTIONS；<br/>6 CONCLUSION；|done|NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| CRF相关  | NULL |NULL |NULL |NULL |
 | 《Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data》  | NULL |余凯论文引用的CRF（将势函数，用转移矩阵代替） |done |NULL |
 | 《Bidirectional LSTM-CRF Models for Sequence Tagging》  | Arxiv2015 |余凯经典的BiLSTM+CRF，其中CRF没做特别的介绍，使用之前论文中提到的方法（将势函数，用转移矩阵替代） |done |NULL |
 | 《Neural Architectures for Named Entity Recognition》  | NAACL2016 |引用了余凯的论文，创新点：<br/>1输入从word变成char；<br/>2 双向lstm特征抽取后，融合了词典特征； |done |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 晶格网络/词表信息  | NULL |NULL |NULL |NULL |
 | 《Chinese NER Using Lattice LSTM》  | ACL2018 |晶格网络NER |done |NULL |
 | 《Simplify the Usage of Lexicon in Chinese NER》  | ACL2020 |融合词表信息：<br/>在输入层融合信息（需要注意特征的形式，有些反直观）； |done |NULL |
 | 《Learning Named Entity Tagger using Domain-Specific Dictionary》  | Arxiv2018 |AutoNER：<br/>利用了带类别信息的词表和没类别信息的词表（分词信息） |done |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 实体Typing  | NULL |NULL |NULL |NULL |
 | 《Neural Architectures for Fine-grained Entity Type Classification》  | ACL2017 |实体Typing：<br/>融合手动特征；<br/>融合层次信息； |done |NULL |
 | 《An attentive fine-grained entity typing model with latent type representation》  | ACL2019 |实体Typing：<br/>context和mention都经过attention处理；<br/>引入类别隐藏表示，并融入到预测中； |done |NULL |
 | 《Hierarchical Entity Typing via Multi-level Learning to Rank》  | ACL2020 |实体Typing：<br/>核心是引入了层次信息；<br/>也使用了类别信息的隐式表示； |done |NULL |
-| NULL  | NULL |NULL |NULL |NULL |
+| 嵌套命名实体  | NULL |NULL |NULL |NULL |
 | 《Deep Exhaustive Model for Nested Named Entity Recognition》  | ACL2018 |嵌套命名实体识别：<br/>窗口内完全遍历，然后分类；<br/>感觉训练应该比较慢，遍历分类的设计会导致batch训练降低速度；<br/>没有使用CRF层，但没特别说明原因； |done |NULL |
 | 《A Boundary-aware Neural Model for Nested Named Entity Recognition》  | ACL2019 |嵌套命名实体识别：<br/>先边界识别，再类别判断（多任务联合训练）；<br/>感觉训练应该比较慢，分类的设计会导致batch训练降低速度；<br/>CRF层引入效果反而降低，但论文中只有实验结果，没有原因； |done |NULL |
+| NULL  | NULL |NULL |NULL |NULL |
 | 《TENER: Adapting Transformer Encoder for Named Entity Recognition》  | NULL |Transformer位置编码实现调整 |NULL |NULL |
 | 《Joint Learning of Named Entity Recognition and Entity Linking》  | ACL2019 |实体识别与实体链接 |NULL |NULL |
 | 《Multilingual Named Entity Recognition Using Pretrained Embeddings, Attention Mechanism and NCRF》  | ACL2019 |基于BERT的NER(实体消歧) |done |NULL |
