--- a/命名实体识别.md
+++ b/命名实体识别.md
@@ -6,7 +6,7 @@
 | 《Conditional Random Fields: Probabilistic Models for Segmenting and Labeling Sequence Data》  | NULL |余凯论文引用的CRF（将势函数，用转移矩阵代替） |done |NULL |
 | 《Bidirectional LSTM-CRF Models for Sequence Tagging》  | Arxiv2015 |余凯经典的BiLSTM+CRF，其中CRF没做特别的介绍，使用之前论文中提到的方法（将势函数，用转移矩阵替代） |done |NULL |
 | 《Neural Architectures for Named Entity Recognition》  | NAACL2016 |引用了余凯的论文，创新点：<br/>1输入从word变成char；<br/>2 双向lstm特征抽取后，融合了词典特征； |done |NULL |
-| 晶格网络/词表信息  | NULL |NULL |NULL |NULL |
+| 晶格网络/词表信息融合  | NULL |NULL |NULL |NULL |
 | 《Chinese NER Using Lattice LSTM》  | ACL2018 |晶格网络NER |done |NULL |
 | 《Simplify the Usage of Lexicon in Chinese NER》  | ACL2020 |融合词表信息：<br/>在输入层融合信息（需要注意特征的形式，有些反直观）； |done |NULL |
 | 《Learning Named Entity Tagger using Domain-Specific Dictionary》  | Arxiv2018 |AutoNER：<br/>利用了带类别信息的词表和没类别信息的词表（分词信息） |done |NULL |
