--- a/文本分类.md
+++ b/文本分类.md
@@ -1,3 +1,10 @@
+** 类别梳理** 
+* 综述
+* 层次分类
+* 多标签分类
+* 类别嵌入
+* 实体嵌入
+
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 综述  | NULL |NULL |NULL |NULL |
