--- a/文本向量化.md
+++ b/文本向量化.md
@@ -4,7 +4,8 @@
 | 《Distributed Representations of Words and Phrases and their Compositionality》| NULL |Tomas Mikolov的word2vec论文：<br/>1 介绍了Hierarchical Softmax和Negative Sampling方法；<br/>2 论文比较难懂；|NULL |NULL |
 | 《word2vec Parameter Learning Explained》| arXiv2016|Tomas Mikolov的word2vec论文解读：<br/>1 理论完备由浅入深非常好懂，且直击要害，既有 high-level 的 intuition 的解释，也有细节的推导过程。一定要看这篇paper！一定要看这篇paper！一定要看这篇paper！|NULL |https://zhuanlan.zhihu.com/p/53425736|
 | 《word2vec Explained: Deriving Mikolov et al.’s Negative-Sampling Word-Embedding Method》| arXiv2014|Tomas Mikolov的word2vec论文解读：<br/>1 对negative-sampling做了详细的解释|NULL |NULL |
-| FastText  | NULL |注意输入部分：字符嵌入？词根嵌入？ |NULL |https://research.fb.com/downloads/fasttext/ |
+| 《Enriching Word Vectors with Subword Information》| ACL2017|FastText:<br/>1 将词拆成词根，重复利用词的形态学信息；<br/>2 能够应对OOV问题；<br/>3 最终词的向量由词根向量相加获得|done|NULL | 
+| 《Bag of Tricks for Efficient Text Classification》| ArXiv2016|FastText：<br/>1 FastText名字的正式由来；2 分类+词向量一起获得；|done|NULL | 
 | 《A Neural Probabilistic Language Model》  | JMLR2003 |Benjo的神经语言模型 |NULL |NULL |
 | 《Universal Sentence Encoder for English》  | NULL |NULL |NULL |NULL |
 | 《Distributed Representations of Sentences and Documents》| ICML2014|段向量：<br/>1 同word2vec一样存在CBOW和Skip-gram两种方案；<br/>2 段落向量要离线训练好，不可能实时训练获得；|done|NULL |
