--- a/图片视频向量化（特征提取）.md
+++ b/图片视频向量化（特征提取）.md
@@ -1,6 +1,8 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
-| NULL  | NULL |NULL |NULL |NULL |
+| 《Aggregating local descriptors into a compact image representation》| CVPR2010|VLAD：<br/>1 将若干局部特征压缩为特定大小全局特征的方法 <br/>2 图像局部特征可以用SIFT，SURF，ORB等一般方法，也可以通过当前流行的CNN方法提取;|done|参考：https://zhuanlan.zhihu.com/p/96718053| 
+| 《NetVLAD: CNN architecture for weakly supervised place recognition》| CVPR2016|NetVLAD: <br/>1 VLAD改进版，参数可以进行端到端训练获得；<br/>2 loss从地点分类任务获得；|done|参考：<br/>https://zhuanlan.zhihu.com/p/96718053 <br/>https://zhuanlan.zhihu.com/p/52936876 | 
+| 《NeXtVLAD: An Efficient Neural Network to Aggregate Frame-level Features for Large-scale Video Classification》| ECCV2018|NeXtVLAD：<br/>1 NetVLAD升级版；<br/>2 参数减少，效果不减；<br/>3 应用在视频分类场景（更好的体现参数减少的必要性？）|done|参考：https://zhuanlan.zhihu.com/p/96718053|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
