--- a/文本质量.md
+++ b/文本质量.md
@@ -3,6 +3,7 @@
 | 《Cognitive Representation Learning of Self-Media Online Article Quality》  | NULL |NULL |done |https://mp.weixin.qq.com/s/cNgIuxMxB2Zu3RoaNpOVTQ |
 | 《Spam Review Detection with Graph Convolutional Networks》  | NULL |阿里闲鱼基于图网络的文本反垃圾 |done |NULL |
 | 《Abusive Language Detection with Graph Convolutional Networks》  | NULL |facebook基于图网络的文本反垃圾 |done |NULL |
+| 《Weak Supervision for Fake News Detection via Reinforcement Learning》| AAAI 2020|基于弱监督的假新闻识别（微信AI方案）：<br/>1 annotator打伪标签；<br/>2 selector(基于强化)从伪标签中选择合适的样本；<br/>3 detector最终判定是否为假新闻；<br/>4 强化学习基于policy gradient；|NULL |https://mp.weixin.qq.com/s/LrihLO_TGR3fqqxITFhzvA|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
